--- a/VTI Final Proj/css/main1.scss
+++ b/VTI Final Proj/css/main1.scss
@@ -72,35 +72,7 @@ h3 {
         font-size: 28px;
         font-weight: 700;
     }
-    .burger-menu {
-        position: absolute;
-        top: auto;
-        right: 20px;
-        display: none;
-        cursor: pointer;
-        @media screen and (max-width: $medium-screen) {
-            display: block;
-        }
-        div {
-            width: 35px;
-            height: 5px;
-            background-color: $blueDark;
-            margin: 6px 0;
-            transition: 0.4s;
-        }
-        &.is-active {
-            div:first-child {
-                transform: rotate(-45deg) translate(-9px, 6px) ;
-            }
-            div:nth-child(2) {
-                opacity: 0;
-                transform: translateX(50px);
-            }
-            div:last-child {
-                transform: rotate(45deg) translate(-8px, -8px) ;
-            }
-        }
-    }
+
     .menu {
         @media screen and (max-width: $medium-screen) {
             height: 0px;
@@ -158,7 +130,7 @@ h3 {
                 position: absolute;
                 bottom: 30px;
                 right: -30px;
-                background-color: $primary-color;
+                background-color: $redLight;
                 padding: 15px;
                 font-size: 24px;
                 cursor: pointer;
@@ -186,7 +158,7 @@ h3 {
                 }
                 .ratings {
                     margin-right: 50px;
-                    color: $gold-color;
+                    color: $orangeLight;
                     p {
                         font-size: 18px;
                     }
@@ -200,8 +172,8 @@ h3 {
             .casts {
                 display: flex;
                 img {
+                    height: 40px;         
                     width: 40px;
-                    height: 40px;
                   object-fit: cover;
                     border-radius: 50%;
                     margin-right: 15px;
@@ -231,4 +203,3 @@ h3 {
             }
         }
     }
-
